# Parser

./: Cargo.toml  README.md  config.toml  source.txt
src/: main.rs
src/models/: types.rs
src/network/: client.rs  gigaclient.rs  giganet.rs  mod.rs  net.rs
src/parsers/: danbooru.rs  gelbooru.rs  mod.rs  nozomi.rs  rule34_us.rs  rule34_xxx.rs  rule34video.rs
src/utility/: easy_print.rs  initializer.rs  mod.rs  utils.rs
