[package]
name = "Parser"
version = "0.1.0"
edition = "2024"

[dependencies]
wreq = "5.3.0"
wreq-util = "2.2.6"
tokio = { version = "1.48.0", features = ["full"] }
select = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regex = "1.12.2"
rand = "0.10.0-rc.5"
toml = "0.9.8"
colored = "3.0.0"
